force-app/main/default/objects/Row_2_Flow_Configuration__mdt/Row_2_Flow_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Row 2 Flow Configuration</label>
    <pluralLabel>Row 2 Flow Configuration</pluralLabel>
</CustomObject>