force-app/main/default/objects/Row_2_Flow_Configuration__mdt/fields/Flow_API__c.field-meta.xml
<CustomField>
    <fullName>Flow_API__c</fullName>
    <description>UBS-3224 - Added</description>
    <label>Flow API</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>