force-app/main/default/objects/Row_2_Flow_Configuration__mdt/fields/Generate_Per_Run_Results_File__c.field-meta.xml
<CustomField>
    <fullName>Generate_Per_Run_Results_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Per Run Results File</label>
    <type>Checkbox</type>
</CustomField>