force-app/main/default/objects/Row_2_Flow_Configuration__mdt/fields/Generate_Results_Record__c.field-meta.xml
<CustomField>
    <fullName>Generate_Results_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Results Record</label>
    <type>Checkbox</type>
</CustomField>