force-app/main/default/objects/Row_2_Flow_Configuration__mdt/fields/Is_Test__c.field-meta.xml
<CustomField>
    <fullName>Is_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>UBS-3224 - Added</description>
    <label>Is Test</label>
    <type>Checkbox</type>
</CustomField>