force-app/main/default/objects/Row_2_Flow_Configuration__mdt/fields/List_View_Id_API_Name__c.field-meta.xml
<CustomField>
    <fullName>List_View_Id_API_Name__c</fullName>
    <label>List View Id or API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>