force-app/main/default/objects/Row_2_Flow_Configuration__mdt/fields/Report_Id_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Id_API_Name__c</fullName>
    <label>Report Id or API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>