force-app/main/default/objects/Row_2_Flow_Configuration__mdt/fields/SOQL_Query_Filter_Conditions__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Query_Filter_Conditions__c</fullName>
    <description>UBS-3667 - Added for Row2Flow SOQL support</description>
    <label>SOQL Query Filter Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>