force-app/main/default/objects/Row_2_Flow_Configuration__mdt/fields/Unique_Column_Header__c.field-meta.xml
<CustomField>
    <fullName>Unique_Column_Header__c</fullName>
    <description>UBS-3667 - Remove uniqueness and require via validation rule if type is Report</description>
    <label>Unique Column Header</label>
    <length>100</length>
    <type>Text</type>
</CustomField>