force-app/main/default/objects/Row_2_Flow_Configuration__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>DeveloperName</columns>
    <columns>Source_Type__c</columns>
    <columns>Flow_API__c</columns>
    <columns>Batch_Size__c</columns>
    <columns>Generate_Results_Record__c</columns>
    <columns>Generate_Per_Run_Results_File__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>